Adicionando novas funcionalidades